[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypcoords"
version = "1.0.1"
description = "Flexible parallel coordinates plot with support for NumPy, pandas, and polars."
authors = [
    { name = "Lucas Detogni" }
]

license = "MIT"
license-files = ["LICENSE"]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9"
]

keywords = ["visualization", "matplotlib", "parallel coordinates", "plot"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LucasMainUser/pypcoords"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]